--- a/ThePost/View/Templates/install.twig
+++ b/ThePost/View/Templates/install.twig
@@ -100,7 +100,15 @@
                             <span class="input-group-addon"><input type="color" class="color" id="style_h2color" name="setting[style_h2color]" value="#3873de" onchange="$('#style_h2color_text').val($(this).val())"></span>
                             <input type="text" class="form-control" id="style_h2color_text" name="style_h2color_text" value="#3873de" onchange="$('#style_h2color').val($(this).val())">
                         </div>
-                        <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2 font color.</p>
+                        <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2.</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="style_backgroundcolor">Heading 2 hover font color.</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><input type="color" class="color" id="style_h2color_hover" name="setting[style_h2color_hover]" value="#23527C" onchange="$('#style_h2color_hover_text').val($(this).val())"></span>
+                            <input type="text" class="form-control" id="style_h2color_hover_text" name="style_h2color_hover_text" value="#23527C" onchange="$('#style_h2color_hover').val($(this).val())">
+                        </div>
+                        <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2 when hovered.</p>
                     </div>
                 </section>
                 <button class="btn btn-primary pull-right" type="submit" name="submit">
