Set the width of the textarea to 100% so it can't get bigger than its parent. Add margin below footer.

--- a/ThePost/View/Templates/css/style.css
+++ b/ThePost/View/Templates/css/style.css
@@ -61,8 +61,16 @@ input[type='color'].form-control  {
     -webkit-appearance: caret;
 }
 
+textarea{
+    max-width: 100%;
+}
+
 input[type="color"]{
     border: none;
+}
+
+footer{
+    margin-bottom: 20px;
 }
 
 .note-editor{
