--- a/ThePost/View/Templates/settings.twig
+++ b/ThePost/View/Templates/settings.twig
@@ -26,6 +26,8 @@
                                        name="{{ setting.key }}_text" value="{{ setting.value }}"
                                        onchange="$('#setting-{{ setting.key }}').val($(this).val())">
                             </div>
+                        {% elseif setting.type == "textarea" %}
+                            <textarea name="settings[{{ setting.key }}]" class="input-setting-{{ setting.key }} form-control" id="setting-{{ setting.key }}" cols="100%">{{ setting.value }}</textarea>
                         {% else %}
                             <input type="{{ setting.type }}" class="input-setting-{{ setting.key }} form-control"
                                    id="setting-{{ setting.key }}" name="settings[{{ setting.key }}]"
