--- a/ThePost/View/Templates/install.twig
+++ b/ThePost/View/Templates/install.twig
@@ -8,7 +8,7 @@
 <div class="container-fluid">
     <div class="content row">
         <main class="main col-md-8">
-            <form class="element clearfix" method="post" action="/install/publish" autocomplete="off">
+            <form class="element clearfix" name="installForm" id="installForm" method="post" action="/install/publish" autocomplete="off">
                 <h1>Install</h1>
                 {% if error.true %}
                 <p class="alert alert-danger">{{ error.msg|raw }}</p>
@@ -81,9 +81,13 @@
                     </div>
                     <div class="form-group">
                         <label for="user_password_verify">Confirm your password</label>
-                        <input type="password" class="form-control" id="user_password_verify" name="user[password_verify]">
+                        <input type="password" class="form-control" id="user_password_verify" name="user[password_verify]" onkeyup="checkPass(); return false;">
 
                         <p class="help-block">Reenter your previous password.</p>
+                        <div hidden class="alert alert-warning" id="confirmMessageDiv" role="alert">
+                            <p id="confirmMessage" class="confirmMessage"></p>
+                        </div>
+
                     </div>
                 </section>
                 <section class="section">
@@ -140,7 +144,10 @@
                         <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2 when hovered.</p>
                     </div>
                 </section>
-                <button class="btn btn-primary pull-right" type="submit" name="submit">
+                <div hidden class="alert alert-warning" id="passwordsAlert" role="alert">
+                    <p>Your passwords do not match!</p>
+                </div>
+                <button class="btn btn-primary pull-right" type="button"  onclick="checkSubmit()" id="submitButton" name="submitbtn">
                     Publish Blog
                 </button>
             </form>
@@ -168,5 +175,6 @@
         background-color: #EFEFEF;
     }
 </style>
+<script src="/ThePost/View/Templates/js/validation.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
