--- a/ThePost/View/Templates/head.twig
+++ b/ThePost/View/Templates/head.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de_CH">
+<html lang="de-CH">
 <head>
     {% block head %}
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
