--- a/ThePost/View/Templates/index.twig
+++ b/ThePost/View/Templates/index.twig
@@ -3,7 +3,20 @@
         {% block title %}
             <title>{{ options.title }}</title>
         {% endblock %}
+    <style>
+        /* User Styles */
+        body {
+            background-color: {{ options.style_backgroundcolor }} !important;
+        }
 
+        h2, h2 a {
+            color: {{ options.style_h2color }} !important;
+        }
+
+        h2:hover, h2 a:hover {
+            color: {{ options.style_h2color_hover }} !important;
+        }
+    </style>
 {% include 'header.twig' %}
 <div class="container-fluid">
     <div class="content row">
@@ -52,28 +65,16 @@
     </div>
 </div>
 {% include 'footer.twig' %}
-</body>
-</html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
-<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+      property="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'
+      property="stylesheet">
 {% block styles %}
-    <link rel="stylesheet" href="/ThePost/View/Templates/css/style.css"/>
+    <link rel="stylesheet" href="/ThePost/View/Templates/css/style.css" property="stylesheet"/>
 {% endblock %}
-<style>
-    /* User Styles */
-    body {
-        background-color: {{ options.style_backgroundcolor }};
-    }
-
-    h2, h2 a {
-        color: {{ options.style_h2color }};
-    }
-
-    h2:hover, h2 a:hover {
-        color: {{ options.style_h2color_hover }};
-    }
-</style>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 {% block scripts %}
 {% endblock %}
+</body>
+</html>
