added required to inputs

--- a/ThePost/View/Templates/install.twig
+++ b/ThePost/View/Templates/install.twig
@@ -24,35 +24,35 @@
                     <div class="form-group">
                         <label for="database_location">Database Location</label>
                         <input type="text" class="form-control" id="database_location" name="database[location]"
-                               placeholder="Database Location" value="localhost">
+                               placeholder="Database Location" value="localhost" required>
 
                         <p class="help-block">Enter the address of your database, if you host your database among your
                             webhost, use "localhost".</p>
                     </div>
                     <div class="form-group">
                         <label for="database_port">Database Port</label>
-                        <input type="number" class="form-control" id="database_port" name="database[port]" value="3306">
+                        <input type="number" class="form-control" id="database_port" name="database[port]" value="3306" required>
 
                         <p class="help-block">Enter the port of your database. Normally the port is 3306 </p>
                     </div>
                     <div class="form-group">
                         <label for="database_username">Database User</label>
                         <input type="text" class="form-control" id="database_username" name="database[username]"
-                               placeholder="Database User">
+                               placeholder="Database User" required>
 
                         <p class="help-block">Please type in your database authentication.</p>
                     </div>
                     <div class="form-group">
                         <label for="database_name">Database Name</label>
                         <input type="text" class="form-control" id="database_name" name="database[name]"
-                               placeholder="Database Name">
+                               placeholder="Database Name" required>
 
                         <p class="help-block">Your database needs CREATE, INSERT, UPDATE and DELETE permission.</p>
                     </div>
                     <div class="form-group">
                         <label for="database_password">Database Password</label>
                         <input type="password" class="form-control" id="database_password" name="database[password]"
-                               placeholder="Database Password">
+                               placeholder="Database Password" required>
 
                         <p class="help-block">Please type in your database password.</p>
                     </div>
@@ -65,23 +65,23 @@
                     <div class="form-group">
                         <label for="user_username">Username</label>
                         <input type="text" class="form-control" id="user_username" name="user[username]"
-                               placeholder="Username" value="Admin">
+                               placeholder="Username" value="Admin" required>
                     </div>
                     <div class="form-group">
                         <label for="user_email">E-Mail</label>
-                        <input type="email" class="form-control" id="user_email" name="user[email]" placeholder="info@chuun.ninja">
+                        <input type="email" class="form-control" id="user_email" name="user[email]" placeholder="info@chuun.ninja" required>
 
                         <p class="help-block">Enter your E-Mail Address, this will be used for your authentication. </p>
                     </div>
                     <div class="form-group">
                         <label for="user_password">Create a password</label>
-                        <input type="password" class="form-control" id="user_password" name="user[password]">
+                        <input type="password" class="form-control" id="user_password" name="user[password]" required>
 
                         <p class="help-block">Please create a password.</p>
                     </div>
                     <div class="form-group">
                         <label for="user_password_verify">Confirm your password</label>
-                        <input type="password" class="form-control" id="user_password_verify" name="user[password_verify]" onkeyup="checkPass(); return false;">
+                        <input type="password" class="form-control" id="user_password_verify" name="user[password_verify]" onkeyup="checkPass(); return false;" required>
 
                         <p class="help-block">Reenter your previous password.</p>
                         <div hidden class="alert alert-warning" id="confirmMessageDiv" role="alert">
@@ -95,7 +95,7 @@
 
                     <div class="form-group">
                         <label for="title">Blog Title</label>
-                        <input type="text" class="form-control" id="title" name="setting[title]" value="Blog Title">
+                        <input type="text" class="form-control" id="title" name="setting[title]" value="Blog Title" required>
 
                         <p class="help-block">The title/logo of your blog.</p>
                     </div>
@@ -104,7 +104,7 @@
                     <div class="form-group">
                         <label for="welcome_title">Welcome Widget Title</label>
                         <input type="text" class="form-control" id="welcome_title" name="setting[welcome_title]"
-                               placeholder="Welcome Widget Title">
+                               placeholder="Welcome Widget Title" required>
 
                     </div>
                     <div class="form-group">
@@ -123,7 +123,7 @@
                         <label for="style_backgroundcolor">Background Color</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_backgroundcolor" name="setting[style_backgroundcolor]" value="#EFEFEF" onchange="$('#style_backgroundcolor_text').val($(this).val())"></span>
-                            <input type="text" class="form-control" id="style_backgroundcolor_text" name="style_backgroundcolor_text" value="#EFEFEF" onchange="$('#style_backgroundcolor').val($(this).val())">
+                            <input type="text" class="form-control" id="style_backgroundcolor_text" name="style_backgroundcolor_text" value="#EFEFEF" onchange="$('#style_backgroundcolor').val($(this).val())" required>
                         </div>
                         <p class="help-block">Background color.</p>
                     </div>
@@ -131,7 +131,7 @@
                         <label for="style_backgroundcolor">Heading 2 font color.</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_h2color" name="setting[style_h2color]" value="#3873de" onchange="$('#style_h2color_text').val($(this).val())"></span>
-                            <input type="text" class="form-control" id="style_h2color_text" name="style_h2color_text" value="#3873de" onchange="$('#style_h2color').val($(this).val())">
+                            <input type="text" class="form-control" id="style_h2color_text" name="style_h2color_text" value="#3873de" onchange="$('#style_h2color').val($(this).val())" required>
                         </div>
                         <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2.</p>
                     </div>
@@ -139,7 +139,7 @@
                         <label for="style_backgroundcolor">Heading 2 hover font color.</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_h2color_hover" name="setting[style_h2color_hover]" value="#23527C" onchange="$('#style_h2color_hover_text').val($(this).val())"></span>
-                            <input type="text" class="form-control" id="style_h2color_hover_text" name="style_h2color_hover_text" value="#23527C" onchange="$('#style_h2color_hover').val($(this).val())">
+                            <input type="text" class="form-control" id="style_h2color_hover_text" name="style_h2color_hover_text" value="#23527C" onchange="$('#style_h2color_hover').val($(this).val())" required>
                         </div>
                         <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2 when hovered.</p>
                     </div>
