Minified JavaScript,CSS

--- a/ThePost/View/Templates/entry.twig
+++ b/ThePost/View/Templates/entry.twig
@@ -6,9 +6,9 @@
 
     {% block styles %}
         {% if authentication.login %}
-            <link rel="stylesheet" href="/ThePost/View/Templates/css/style-summernote.css"/>
+            <link rel="stylesheet" href="/ThePost/View/Templates/css/style-summernote.min.css"/>
         {% else %}
-            <link rel="stylesheet" href="/ThePost/View/Templates/css/style.css"/>
+            <link rel="stylesheet" href="/ThePost/View/Templates/css/style.min.css"/>
         {% endif %}
     {% endblock %}
 
@@ -51,7 +51,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="/ThePost/View/Templates/js/upload.js"></script>
+    <script src="/ThePost/View/Templates/js/upload.min.js"></script>
     <script src="/ThePost/View/Templates/js/summernote.min.js"></script>
     <script>
         $(document).ready(function () {
