--- a/ThePost/View/Templates/install.twig
+++ b/ThePost/View/Templates/install.twig
@@ -168,13 +168,13 @@
 </html>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="/ThePost/View/Templates/css/style.css">
+<link rel="stylesheet" href="/ThePost/View/Templates/css/style.min.css">
 <style>
     /* User Styles */
     body {
         background-color: #EFEFEF;
     }
 </style>
-<script src="/ThePost/View/Templates/js/validation.js"></script>
+<script src="/ThePost/View/Templates/js/validation.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
