--- a/ThePost/View/Templates/index.twig
+++ b/ThePost/View/Templates/index.twig
@@ -70,7 +70,7 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'
       property="stylesheet">
 {% block styles %}
-    <link rel="stylesheet" href="/ThePost/View/Templates/css/style.css" property="stylesheet"/>
+    <link rel="stylesheet" href="/ThePost/View/Templates/css/style.min.css" property="stylesheet"/>
 {% endblock %}
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
