--- a/ThePost/View/Templates/install.twig
+++ b/ThePost/View/Templates/install.twig
@@ -120,7 +120,7 @@
                     <p class="bs-callout bs-callout-warning" role="alert">Don't be afraid :). You can still set these
                         settings later.</p>
                     <div class="form-group">
-                        <label for="style_backgroundcolor">Background Color</label>
+                        <label for="style_backgroundcolor_text">Background Color</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_backgroundcolor" name="setting[style_backgroundcolor]" value="#EFEFEF" onchange="$('#style_backgroundcolor_text').val($(this).val())"></span>
                             <input type="text" class="form-control" id="style_backgroundcolor_text" name="style_backgroundcolor_text" value="#EFEFEF" onchange="$('#style_backgroundcolor').val($(this).val())" required>
@@ -128,7 +128,7 @@
                         <p class="help-block">Background color.</p>
                     </div>
                     <div class="form-group">
-                        <label for="style_backgroundcolor">Heading 2 font color.</label>
+                        <label for="style_h2color_text">Heading 2 font color.</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_h2color" name="setting[style_h2color]" value="#3873de" onchange="$('#style_h2color_text').val($(this).val())"></span>
                             <input type="text" class="form-control" id="style_h2color_text" name="style_h2color_text" value="#3873de" onchange="$('#style_h2color').val($(this).val())" required>
@@ -136,7 +136,7 @@
                         <p class="help-block">The font color of <code>&lt;h2&gt;</code> Heading 2.</p>
                     </div>
                     <div class="form-group">
-                        <label for="style_backgroundcolor">Heading 2 hover font color.</label>
+                        <label for="style_h2color_hover_text">Heading 2 hover font color.</label>
                         <div class="input-group">
                             <span class="input-group-addon"><input type="color" class="color" id="style_h2color_hover" name="setting[style_h2color_hover]" value="#23527C" onchange="$('#style_h2color_hover_text').val($(this).val())"></span>
                             <input type="text" class="form-control" id="style_h2color_hover_text" name="style_h2color_hover_text" value="#23527C" onchange="$('#style_h2color_hover').val($(this).val())" required>
