--- a/ThePost/View/Templates/entry.twig
+++ b/ThePost/View/Templates/entry.twig
@@ -26,7 +26,7 @@
     {% endif %}
         {% if authentication.login %}
 
-            <h2 class="title onedit" contenteditable="true" placeholder="Your title">{{ entry.title }}</h2>
+            <h2 class="title onedit" contenteditable="true" data-placeholder="Your title">{{ entry.title }}</h2>
             <div class="text onedit summernote"></div>
             {% if entry.id is defined %}
                 <button class="update btn btn-default pull-right" onclick="uploadEntry('entry',{{ entry.id }})">
